add limit user, update resetpasss, swagger
