# docs/swagger.yaml
@@ -51,19 +51,27 @@ definitions:
         type: string
       full_name:
         type: string
+      phone_number:
+        type: string
+    type: object
+  model.UserUpdatePassword:
+    properties:
+      new_password:
+        type: string
       password:
         type: string
-      phone_number:
+      username:
         type: string
     type: object
 info:
   contact: {}
+  license: {}
   title: OCR AUTHORIZATION API
   version: "1.0"
 paths:
   /api/v1/auth/user/{user_id}:
     get:
-      description: create user
+      description: get info user
       parameters:
       - description: user id
         in: path
@@ -84,7 +92,7 @@ paths:
       tags:
       - User
     post:
-      description: create user
+      description: update user
       parameters:
       - description: user id
         in: path
@@ -112,7 +120,7 @@ paths:
       - User
   /api/v1/login:
     post:
-      description: create user
+      description: user login
       parameters:
       - description: json
         in: body
@@ -143,6 +151,24 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.UserResponse'
+      summary: user
+      tags:
+      - User
+  /api/v1/reset_password:
+    post:
+      description: update password user
+      parameters:
+      - description: json
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/model.UserUpdatePassword'
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: string
       summary: user
       tags:
       - User
